--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(kinematics)
 set(CMAKE_BUILD_TYPE Debug)
 include_directories(include)
 
-add_executable(main src/main.cpp src/transform.cpp src/utils.cpp)
+add_executable(main src/main.cpp src/kinematics.cpp src/utils.cpp)
