Updates to test to use a VSC++ library instead of source code, tested Jacobian

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ project(kinematics)
 set(CMAKE_BUILD_TYPE Debug)
 include_directories(include)
 
-add_executable(main src/main.cpp src/kinematics.cpp src/utils.cpp)
+add_library(kinematics STATIC src/kinematics.cpp src/utils.cpp)
+
+add_executable(main src/main.cpp)
+
+target_link_libraries(main kinematics)
